--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: katyunya.aleksandrovna.97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   В руководстве по Git приведено описание по установке, развертыванию и
   использованию данного инструмента техническим писателем.
-baseurl: "portfoliogit" # the subpath of your site, e.g. /blog
+baseurl: "primery" # the subpath of your site, e.g. /blog
 url: "https://Ekaterinka17.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 telegram_username: @kettic17
 github_username: Ekaterinka17
