--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   использованию данного инструмента техническим писателем.
 baseurl: "primery" # the subpath of your site, e.g. /blog
 url: "https://Ekaterinka17.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-telegram_username: kettic17
+
+social_links:
+  ru:
+    telegram: https://t.me/kettic17
 github_username: Ekaterinka17
 
 # Build settings
