--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: Your awesome title
-email: your-email@example.com
+title: Руководство по Git
+email: katyunya.aleksandrovna.97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  В руководстве по Git приведено описание по установке, развертыванию и
+  использованию данного инструмента техническим писателем.
 baseurl: "primery" # the subpath of your site, e.g. /blog
 url: "https://Ekaterinka17.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+telegram: https://t.me/kettic17
+github_username: Ekaterinka17
 
 # Build settings
 markdown: kramdown
 permalink: /:title:output_ext
+theme: minima
