--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,11 @@ baseurl: "primery" # the subpath of your site, e.g. /blog
 url: "https://Ekaterinka17.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kettic17
 github_username: Ekaterinka17
-
+  
 # Build settings
-markdown: kramdown
-kramdown:
- input: GFM
+markdown: GFM
+plugins:
+  - jekyll-gfm-admonitions
+  - jekyll-optional-front-matter
 permalink: /:title:output_ext
 theme: minima
