--- a/_config.yml
+++ b/_config.yml
@@ -12,21 +12,17 @@ github_username: Ekaterinka17
 markdown: GFM
 plugins:
   - jekyll-gfm-admonitions
-  - jekyll-optional-front-matter
 
-exclude: 
-  - "**/*.ts" # Exclude source code files!
-  - "**/*.js"
-  - "*.ts" # Also those in the root directory!
-  - "*.js"
-  - "*.json" # Don't forget about assets!
-  - node_modules/ # And large vendored directories
-  # And these ignore all the artifacts the build produces:
+include:
+  - rabota_s_udalenym_repozitoriem.md
+exclude:
+  - sample/
   - .sass-cache/
   - .jekyll-cache/
   - gemfiles/
   - Gemfile
   - Gemfile.lock
+  - node_modules/
   - vendor/bundle/
   - vendor/cache/
   - vendor/gems/
