--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Руководство по Git
 email: katyunya.aleksandrovna.97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Руководство представлено как портфолио. Подробную информацию по работе с Git читать по адресу https://git-scm.com/doc.
+  Руководство представлено исключительно как портфолио.
 baseurl: "primery" # the subpath of your site, e.g. /blog
 url: "https://Ekaterinka17.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kettic17
